syntax = "proto3";
import "nanopb.proto";

package mos_rpc;

option (nanopb_fileopt).fallback_type = FT_POINTER;
option (nanopb_fileopt).proto3_singular_msgs = true;

message result
{
    bool success = 1;
    optional string error = 2;
}
